# Voxel-Game-Demo

./: CMakeLists.txt  README.md  README.md.bak  Voxel-Game-Demo.sln  Voxel-Game-Demo.vcxproj  Voxel-Game-Demo.vcxproj.filters  build.bat
Libraries/include/glad/: glad.h
resources/shaders/: chunkshader.frag  chunkshader.vert  crosshair.vert  cube.frag  cube.vert  modek.frag  model.vert  polygone.frag  polygone.vert  quad2D.frag  skybox.frag  skybox.vert
source/: build.bat
source/Libraries/include/json/: json.h
source/Libraries/lib/: glfw3.lib
source/resources/shaders/: chunkshader.vert  cube.vert  light.frag  light.vert  polygone.vert  quat2D.vert  skybox.frag  skybox.vert
source/src/: Main.cpp
source/src/abstractions/: Polygone.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp
source/src/controls/: MovementManager.cpp  Player.cpp  Player.h
source/src/dependencies/: glad.cpp  stb_image.cpp
source/src/meshes/: CubeMesh.cpp  CubeMesh.h  Model.h
source/src/world/: Chunk.cpp  ChunkManager.h
src/: Main.cpp
src/abstractions/: EBO.cpp  EBO.h  Polygone.cpp  Polygone.h  Polygone2D.cpp  Polygone2D.h  Quad2D.cpp  Quad2D.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  VAO.h  VBO.cpp  VBO.h
src/controls/: MovementManager.cpp  MovementManager.h  Player.cpp  Player.h
src/dependencies/: glad.c
src/meshes/: CubeMesh.cpp  CubeMesh.h  Mesh.cpp  Mesh.h  Model.cpp
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
